traces/bug_763.txt
examples++-load/Element_Mixte.cpp:1428: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::Elm__TypeOfFE_BDM1_2dOrtho accesses global variable from a different translation unit: map_type|.
Showing all 5 steps of the trace


examples++-load/Element_Mixte.cpp:1428:5: initialization of Fem2D::Elm__TypeOfFE_BDM1_2dOrtho
1426.   
1427.       static AddNewFE Elm__TypeOfFE_BDM1_2d("BDM1",&Elm_TypeOfFE_BDM1_2d);
1428.       static AddNewFE Elm__TypeOfFE_BDM1_2dOrtho("BDM1Ortho",&Elm_TypeOfFE_BDM1_2dOrtho); 
            ^
1429.       
1430.   } // FEM2d namespace 

examples++-load/Element_Mixte.cpp:1428:21: call to AddNewFE_AddNewFE
1426.   
1427.       static AddNewFE Elm__TypeOfFE_BDM1_2d("BDM1",&Elm_TypeOfFE_BDM1_2d);
1428.       static AddNewFE Elm__TypeOfFE_BDM1_2dOrtho("BDM1Ortho",&Elm_TypeOfFE_BDM1_2dOrtho); 
                            ^
1429.       
1430.   } // FEM2d namespace 

src/fflib/AddNewFE.h:52:34: call to atype<Fem2D::TypeOfFE_*>
  50.     {
  51.       ffassert(tfe); // check 
  52.       Global.New(FEname, Type_Expr(atype<Fem2D::TypeOfFE*>() ,new  EConstantTypeOfFE(tfe)));
                                         ^
  53.     }
  54.   };

src/fflib/AFunction.hpp:339:14: call to ShowType
    337.    // basicForEachType * r=map_type[];
    338.     if (ir == map_type.end()) { cerr << "Error: aType  '" << typeid(T).name() << "', doesn't exist\n";
    339.                ShowType(cerr);
                        ^
    340.               throw(ErrorExec("exit",1));}
    341.     return ir->second;}

src/fflib/AFunction2.cpp:708:10: access to map_type|
    706.    
    707.      map<const string,basicForEachType *>::const_iterator i;
    708.      for(i=map_type.begin();i!=map_type.end();i++)
                    ^
    709.        {
    710.          f << " --"<< i->first <<" = " ; 
